2007-03-15 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix buggy get_begidx, get_endidx
	* Fix to ensure unicode strings can print something using the write_x methods on Console.

2007-03-06 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Changed tests for ironpython
	* Added possibility to bind ctrl-c to a function
	* Refactor clipboard handling
	* Restructured example config file
	
2006-11-15 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* moved ironpython specifics from emacs.py->readline to a hook_wrapper
	  just as in the hookwrapper for the normal console.

2006-11-15 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Rearranging pyreadlineconfig.ini
	
2006-11-13 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed bug in tab completion when point is not at end of line
	* Changed clr.AddReference to clr.AddReferenceToFileAndPath (ironpython_console)
	* Fix points position after tab completion
	* Fix for difference in handling of multiline input between cpython and ironpython (emacs.py)
	* added test_complete case to emacs_test.py
	* Ported changes to configuration/startup from trunk
	
2006-11-03 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Improvements in ironpython handling.
	* Detection of ironpython explicit on sys.version instead of relying on presense of ctypes
	* Lots of fixes to take care of peculiaritis of System.Console in .NET it does not have 
	  the full windows console functionality. Fill a rectangle is missing, writing without 
	  affecting cursor is missing, altgr keys show up as alt+ctrl so had to blank alt+ctrl in
	  keyboard event checking, endoffile signal to from readline is not using EOFError in ironpython
	  rather returning None
	* Set selectioncolor by looking at foregroundcolor at startup
	* open in ironpython does not ignore unknown letters in mode silently, hade "rt" in history open