@@ -38,7 +38,7 @@ bind_key("Control-_",           "undo")
 bind_key("Delete",              "delete_char")
 bind_key("Control-d",           "delete_char")
 bind_key("BackSpace",           "backward_delete_char")
-#bind_key("Control-Shift-v",     "quoted_insert")
+#bind_key("Control-Shift-v",    "quoted_insert")
 bind_key("Control-space",       "self_insert")
 bind_key("Control-BackSpace",   "backward_delete_word")
 
@@ -48,7 +48,7 @@ bind_key("Control-shift-k",     "kill_whole_line")
 bind_key("Escape",              "kill_whole_line")
 bind_key("Meta-d",              "kill_word")
 bind_key("Control-w",           "unix_word_rubout")
-bind_key("Meta-Delete",         "backward_kill_word")
+#bind_key("Control-Delete",     "forward_kill_word")
 
 #Copy paste
 bind_key("Shift-Right",         "forward_char_extend_selection")
